--- a/function_examples.ipynb
+++ b/function_examples.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaVIm/QAbeHa037uosHE20",
+      "authorship_tag": "ABX9TyM2PehRtJsPQRJN0aMgzX3R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "S9gnGGj-Rbix"
       },
@@ -54,7 +54,7 @@
         "id": "BPHc5c6CSgVS",
         "outputId": "38ddc54d-9781-4275-e8c4-6d30fe55b4b9"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "tm8xJKnKZdpZ"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
       "metadata": {
         "id": "ogYtMLNZbdW7"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
         "id": "3h6stdbgdLY1",
         "outputId": "264b3184-50ae-4d9e-d205-d528a625231a"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,6 +134,161 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import string\n",
+        "string.punctuation"
+      ],
+      "metadata": {
+        "id": "OK9AAEsP16wz",
+        "outputId": "371f6edb-a189-424b-e6cd-7e3aebe5e34b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = 'This function removes punctuations from text data' + string.punctuation"
+      ],
+      "metadata": {
+        "id": "dgvmPRgG2RJe"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(text)"
+      ],
+      "metadata": {
+        "id": "iRqrTygW4Zsn",
+        "outputId": "f156ab21-9a7a-4938-dac2-784e6d6e0c9f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This function removes punctuations from text data!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def remove_punctuations(text):\n",
+        "    import string\n",
+        "    for punctuation in string.punctuation:\n",
+        "        text = text.replace(punctuation, '')\n",
+        "    return text\n",
+        "clean_text = remove_punctuations(text)"
+      ],
+      "metadata": {
+        "id": "YI49FwwK1rqE"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(clean_text)"
+      ],
+      "metadata": {
+        "id": "loSAcKro4ndO",
+        "outputId": "a8e45405-f487-4bf2-f23b-6a6cb8cb312c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This function removes punctuations from text data\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re"
+      ],
+      "metadata": {
+        "id": "7Aq6Kn256LJE"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def remove_special_characters(text):\n",
+        "    text = re.sub('[^a-zA-z0-9\\s]', '', text)\n",
+        "    return text"
+      ],
+      "metadata": {
+        "id": "hHdMqf5x6HOd"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def remove_html(text):\n",
+        "    import re\n",
+        "    html_pattern = re.compile('<.*?>')\n",
+        "    return html_pattern.sub(r' ', text)"
+      ],
+      "metadata": {
+        "id": "kiElqtZ26XrX"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def remove_URL(text):\n",
+        "    url = re.compile(r'https?://\\S+|www\\.\\S+')\n",
+        "    return url.sub(r' ',text)"
+      ],
+      "metadata": {
+        "id": "m0QiMEFj6nd5"
+      },
+      "execution_count": 15,
+      "outputs": []
     }
   ]
 }
